--- a/webDesign.html
+++ b/webDesign.html
@@ -17,11 +17,11 @@
                     <div class="hideMenu" onclick="hideMenu()"></div>
                 </div>
                 <div class="mentcon">
-                    <a href="./webDesign.html">
-                        <img src="./images/t1.png" alt="" />
-                    </a>
                     <a href="./info.html">
                         <img src="./images/t2.png" alt="" />
+                    </a>
+                    <a href="./webDesign.html">
+                        <img src="./images/t1.png" alt="" />
                     </a>
                     <a href="./community.html">
                         <img src="./images/t3.png" alt="" />
@@ -49,12 +49,24 @@
                         <img src="./images/webtitle.jpg" alt="" />
                     </div>
                     <div class="webcon">
-                        <a href="./webDesign1.html" class="list"></a>
-                        <a href="./webDesign2.html" class="list"></a>
-                        <a href="./webDesign3.html" class="list"></a>
-                        <a href="./webDesign4.html" class="list"></a>
-                        <a href="./webDesign5.html" class="list"></a>
-                        <a href="./webDesign6.html" class="list"></a>
+                        <a href="./webDesign1.html" class="list">
+                            <img src="./images/w1.jpg" alt="" />
+                        </a>
+                        <a href="./webDesign2.html" class="list">
+                            <img src="./images/w2.jpg" alt="" />
+                        </a>
+                        <a href="./webDesign3.html" class="list">
+                            <img src="./images/w3.jpg" alt="" />
+                        </a>
+                        <a href="./webDesign4.html" class="list">
+                            <img src="./images/w4.jpg" alt="" />
+                        </a>
+                        <a href="./webDesign5.html" class="list">
+                            <img src="./images/w5.jpg" alt="" />
+                        </a>
+                        <a href="./webDesign6.html" class="list">
+                            <img src="./images/w6.jpg" alt="" />
+                        </a>
                     </div>
                 </div>
             </div>
