--- a/webDesign.html
+++ b/webDesign.html
@@ -50,10 +50,10 @@
                     </div>
                     <div class="webcon">
                         <a href="./webDesign1.html" class="list">
-                            <img src="./images/w1.jpg" alt="" />
+                            <img src="./images/w1-1.jpg" alt="" />
                         </a>
                         <a href="./webDesign2.html" class="list">
-                            <img src="./images/w2.jpg" alt="" />
+                            <img src="./images/w2-1.jpg" alt="" />
                         </a>
                         <a href="./webDesign3.html" class="list">
                             <img src="./images/w3.jpg" alt="" />
