--- a/webDesign2.html
+++ b/webDesign2.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" href="./images/icon.png" />
         <link rel="bookmart" href="./images/icon.png" />
-        <title>三也科技</title>
+        <title>遊戲平台設計</title>
         <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="content">
-                <img src="./images/web2.jpg" alt="" />
+                <img src="./images/web2-1.jpg" alt="" />
             </div>
             <div class="back">
                 <a class="goback" href="./index.html"></a>
